fixed alignment issue with view story page

--- a/react-app/src/components/StoriesPage/StoriesPage.css
+++ b/react-app/src/components/StoriesPage/StoriesPage.css
@@ -6,7 +6,7 @@
 
 .stories-feed-div {
     display: flex;
-    padding: 40px 60px 0 60px;
+    padding: 40px 225px 0;
     width: 100%;
     justify-content: center;
 }
