--- a/react-app/src/components/YourStories/YourStories.css
+++ b/react-app/src/components/YourStories/YourStories.css
@@ -1,6 +1,6 @@
 .your-stories-div {
     display: flex;
-    padding: 40px 60px 0 60px;
+    padding: 40px 225px 0;
     width: 100%;
     align-items: center;
     flex-direction: column;
